--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.4.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build-analyzer": "vue-cli-service build --analyzer",
     "lint": "vue-cli-service lint",
-    "start": "npm run serve",
+    "start": "npm run dev",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
