--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-# git 忽略文件配置
-
 .DS_Store
 node_modules
-dist
-package-lock.json
+/dist
+
 
 # local env files
 .env.local
@@ -13,10 +11,11 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
-#.vscode
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
