--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0",
     "axios": "^0.19.2",
+    "core-js": "^3.6.5",
     "echarts": "^4.9.0",
+    "element-plus": "^1.0.1-beta.19",
     "nprogress": "^0.2.0",
+    "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
     "vuex-composition-helpers": "^1.0.22"
@@ -33,16 +34,18 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^2.0.0-0",
-    "babel-preset-vca-jsx": "^0.3.6",
     "babel-eslint": "^10.1.0",
+    "babel-preset-vca-jsx": "^0.3.6",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "lint-staged": "^9.5.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.4",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-element-plus": "~0.0.9",
     "vue-jest": "^5.0.0-0"
   },
   "gitHooks": {
