--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-plugin-component": "^1.1.1",
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
     "element-plus": "^1.0.1-beta.19",
