--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "nprogress": "^0.2.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0",
-    "vuex-composition-helpers": "^1.0.22"
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
